[package]
name = "rs_sxcks"
version = "0.1.0"
authors = ["jyi2ya <jyi2ya@outlook.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    # "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
reqwest = "0.11.22"
anyhow = "1.0.75"
scraper = "0.18.1"
ego-tree = "0.6.2"
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
image = { version = "0.24.7", features = ["jpeg", "png", "bmp", "gif", "webp"] }
opml = "1.1.5"
uuid = { version = "1.5.0", features = ["v4"] }
feed-rs = "1.3.0"
url = "2.4.1"
ehttp = "0.3.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2.11", features = ["js"] }

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
